--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "name": "quote-machine",
   "version": "1.0.0",
-  "description": "This app will display a beatiful randomly quote",
-  "main": "index.js",
-  "dependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0"
-  },
+  "description": "This app will show you a randomly beautiful quote to cheer up your day",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/Fenwil/quote-machine/issues"
   },
-  "homepage": "https://github.com/Fenwil/quote-machine#readme"
+  "homepage": "https://github.com/Fenwil/quote-machine#readme",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.0.13",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-uglify": "^2.0.0"
+  }
 }
