--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-imagemin": "^3.1.1",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1"
   }
 }
