--- a/package.json
+++ b/package.json
@@ -26,7 +26,5 @@
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0"
   },
-  "dependencies": {
-    "jquery": "^3.1.1"
-  }
+  "dependencies": {}
 }
